# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1077 2009/12/02 10:41:35 mn Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/12/02) Completely removed YUI from the OTRS code.
 - (2009/12/02) Switched line chart on the dashboard from YUI to OFC.
 - (2009/11/27) Updated CPAN modules.
 - (2009/11/27) changed directory structure for thirdparty javascript modules
 - (2009/11/27) switched AutoCompletion and Dialog from YUI to jQuery
 - (2009/11/25) switched to XHTML doctype
    - not all of the generated HTML is valid yet, but much
    - from now on, ";" will be used as a query parameter separator in URLs
        (old: index.pl?Action=AgentExample&Subaction=Test,
        new: index.pl?Action=AgentExample;Subaction=Test)
    - made some self-closing tags actually close themselves (e.g. <img .../>)
    - made some tags and attributes used lowercase
 - (2009/11/25) Updated CPAN module CGI to version 3.48.
 - (2009/11/23) Only database configuration is now saved in Config.pm.
 - (2009/11/18) Added database check and mail configuration steps
    to the web installer.
 - (2009/11/12) Fixed bug#4509 - Notification (event based) comments are not
    saved.
 - (2009/11/11) Added feature/config option (Ticket::SubjectFormat) for subject
    format.
     o 'Left'  means '[TicketHook#:12345] Some Subject',
     o 'Right' means 'Some Subject [TicketHook#:12345]',
     o 'None'  means 'Some Subject' (without any ticket number ins subject).

    In the last case you should enable PostmasterFollowupSearchInRaw or
    PostmasterFollowUpSearchInReferences to recognize followups based on email
    headers and/or body.
    Wrote also unit tests to take care of functionality.
 - (2009/11/11) Moved from prototype js to jQuery