@@ -2,7 +2,7 @@
 # Kernel/System/Main.pm - main core components
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: Main.pm,v 1.36 2009/11/26 12:23:09 bes Exp $
+# $Id: Main.pm,v 1.37 2009/12/02 22:32:06 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -20,7 +20,7 @@ use Data::Dumper;
 use Kernel::System::Encode;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.36 $) [1];
+$VERSION = qw($Revision: 1.37 $) [1];
 
 =head1 NAME
 
@@ -448,6 +448,11 @@ sub FileWrite {
 
     # enable binmode
     if ( !$Param{Mode} || $Param{Mode} =~ /^binmode/i ) {
+
+        # make sure, that no utf8 stamp exists (otherway perl will do auto convert to iso)
+        $Self->{EncodeObject}->EncodeOutput( $Param{Content} );
+
+        # set file handle to binmode
         binmode($FH);
     }
 
@@ -765,6 +770,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.36 $ $Date: 2009/11/26 12:23:09 $
+$Revision: 1.37 $ $Date: 2009/12/02 22:32:06 $
 
 =cut
